Small fixes from Issue274 as submitted by author.